--- a/index.html/index.html
+++ b/index.html/index.html
@@ -14,7 +14,7 @@
         <section class="navbar">
 
            <div class="nav-img">
-                <img src="../assets/logo.png">
+                <img src="../B12A02-Responsive-Flowers/assets/logo.png">
             </div>
              
             <div class="nav-pre">
