--- a/index.html/index.html
+++ b/index.html/index.html
@@ -34,14 +34,93 @@
    <div class="banner">
                     <div class="banner-text">
                         <p class="tx-main">ALWAYS<span style="color:rgba(233, 90, 8, 1)">FRESH<br>FLOWERS</span> </p>
-                        <p class="tx-sub">Indulge your senses with the beauty and fragrance of<br> our fresh flower shop. From classic roses to exotic<br> blooms, we offer a wide variety of fresh flowers that<br> are perfect for any occasion. </p>
+                        <p class="tx-sub">Indulge your senses with the beauty and fragrance of<br> our fresh flower shop. From<br> classic roses to exotic<br> blooms, we offer a wide variety of fresh flowers that<br> are perfect for any occasion. </p>
                     </div>
 
                    <div>
-                    <img src="../B12A02-Responsive-Flowers/assets/hero-flower.png">
+                    <img class="bn-img" src="../B12A02-Responsive-Flowers/assets/hero-flower.png">
                    </div>
                 </div>
+
          
+                <div class="plants">
+
+                      <div>
+                      <p style=" margin-bottom:0px;text-align: center;font-size: 50px;font-family: Noto Serif, serif;font-weight: bold;">Our <span style="color:rgba(233, 90, 8, 1)">Plants</span>  </p>
+                      <p style="text-align: center;font-family:Inter, sans-serif ;
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 22px;margin-bottom: 50px;margin-top: 5px;">Indulge your senses with the beauty and fragrance of our fresh flower shop. From<br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                      </div>
+
+
+                 <div class="flower-sp">
+                      <div class="p-1">
+                      <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
+                       <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
+                       <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
+                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                      </div>
+
+
+<div class="p-1">
+                      <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
+                       <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
+                       <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
+                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                      </div>
+
+                      <div class="p-1">
+                      <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
+                       <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
+                       <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
+                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                      </div>
+
+                      <div class="p-1">
+                      <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
+                       <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
+                       <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
+                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                      </div>
+
+                      <div class="p-1">
+                      <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
+                       <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
+                       <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
+                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                      </div>
+
+                      <div class="p-1">
+                      <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
+                       <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
+                       <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
+                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                      </div>
+
+                      <div class="p-1">
+                      <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
+                       <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
+                       <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
+                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                      </div>
+
+                      <div class="p-1">
+                      <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
+                       <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
+                       <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
+                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                      </div>
+
+
+
+
+                 </div>
+
+                </div>
       
+
+
+
+
 </body>
 </html>
