--- a/index.html/index.html
+++ b/index.html/index.html
@@ -121,6 +121,29 @@
 
 
 
+                     <div class="flower">
+
+                     <div class="badge">
+                       
+                        <img  class="store" src="../B12A02-Responsive-Flowers/assets/flower-store.png">
+                        <img class="tt" src="../B12A02-Responsive-Flowers/assets/trusted-badge.png">
+
+                     </div> 
+                     <div>
+
+                        <p style=" font-size: 50px;font-family: Noto Serif, serif;font-weight: bold;">Flower & Plants<br> Lover</p>
+                        <ul>
+                            <li style="font-family:Inter,sans-serif;color:rgba(0, 0, 0, 0.5);font-size: 22px;">
+    
+   Indulge your senses with the beauty and<br> fragrance of our fresh flower shop. From classic <br>roses to exotic blooms, we offer a wide variety<br> of fresh.</li>
+                            <li style="font-family:Inter,sans-serif;color:rgba(0, 0, 0, 0.5);font-size: 22px;">Indulge your senses with the beauty and<br> fragrance of our fresh flower shop. From classic<br> roses to exotic blooms, we offer a wide variety <br>of fresh.</li>
+                            <li style="font-family:Inter,sans-serif;color:rgba(0, 0, 0, 0.5);font-size: 22px;">Indulge your senses with the beauty and<br> fragrance of our fresh flower shop. From classic<br> roses to exotic blooms, we offer a wide variety<br> of fresh.</li>
+                        </ul>
+                     </div> 
+
+                     </div>
+
+
 
 </body>
 </html>
