--- a/index.html/index.html
+++ b/index.html/index.html
@@ -34,7 +34,7 @@
    <div class="banner">
                     <div class="banner-text">
                         <p class="tx-main">ALWAYS<span style="color:rgba(233, 90, 8, 1)">FRESH<br>FLOWERS</span> </p>
-                        <p class="tx-sub">Indulge your senses with the beauty and fragrance of<br> our fresh flower shop. From<br> classic roses to exotic<br> blooms, we offer a wide variety of fresh flowers that<br> are perfect for any occasion. </p>
+                        <p class="tx-sub">Indulge your senses with the beauty and fragrance of<br> our fresh flower shop. From<span class="eas"><br></span> classic roses to exotic<br> blooms, we offer a wide variety of fresh flowers that<br> are perfect for any occasion. </p>
                     </div>
 
                    <div>
@@ -46,10 +46,8 @@
                 <div class="plants">
 
                       <div>
-                      <p style=" margin-bottom:0px;text-align: center;font-size: 50px;font-family: Noto Serif, serif;font-weight: bold;">Our <span style="color:rgba(233, 90, 8, 1)">Plants</span>  </p>
-                      <p style="text-align: center;font-family:Inter, sans-serif ;
-    color: rgba(0, 0, 0, 0.5);
-    font-size: 22px;margin-bottom: 50px;margin-top: 5px;">Indulge your senses with the beauty and fragrance of our fresh flower shop. From<br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                      <p class="tx-plants">Our <span style="color:rgba(233, 90, 8, 1)">Plants</span></p>
+                      <p class="text-plants-2">Indulge your senses with the beauty and<span class="mobile-break"><br></span> fragrance of our fresh flower shop. From<span class="eas"><br></span> classic<span class="mobile-break"><br></span> roses to exotic blooms, we offer a wide variety of<span class="mobile-break"><br></span> fresh.</p>
                       </div>
 
 
@@ -58,7 +56,7 @@
                       <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
                        <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
                        <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
-                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                       <button onclick="addtoCart()" style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
                       </div>
 
 
@@ -66,49 +64,49 @@
                       <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
                        <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
                        <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
-                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                       <button onclick="addtoCart()" style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
                       </div>
 
                       <div class="p-1">
                       <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
                        <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
                        <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
-                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                       <button onclick="addtoCart()" style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
                       </div>
 
                       <div class="p-1">
                       <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
                        <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
                        <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
-                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                       <button onclick="addtoCart()"  style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
                       </div>
 
                       <div class="p-1">
                       <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
                        <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
                        <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
-                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                       <button onclick="addtoCart()"  style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
                       </div>
 
                       <div class="p-1">
                       <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
                        <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
                        <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
-                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                       <button onclick="addtoCart()"   style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
                       </div>
 
                       <div class="p-1">
                       <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
                        <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
                        <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
-                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                       <button onclick="addtoCart()"   style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
                       </div>
 
                       <div class="p-1">
                       <img src="../B12A02-Responsive-Flowers/assets/sample-flower-image.png">
                        <p style="text-align: center;margin-bottom: 0px;font-family: Inter, sans-serif ;font-weight:500;font-size: 22px;" >Lily Blossom</p>
                        <p style="text-align: center;margin-top: 0px;font-weight: bold;font-size: 22px;font-family: Inter, sans-serif ;"> 20 USD</p>
-                       <button style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
+                       <button onclick="addtoCart()"  style=" font-size: 16px; font-family: Inter, sans-serif ; font-weight:550; text-align: center; color: white;background-color: rgba(233, 90, 8, 1); padding: 15px 20px;border: none;">Add to cart</button>
                       </div>
 
 
@@ -131,20 +129,20 @@
                      </div> 
                      <div>
 
-                        <p style=" font-size: 50px;font-family: Noto Serif, serif;font-weight: bold;">Flower & Plants<br> Lover</p>
+                        <p class="esu-ni" font-size: 50px;font-family: Noto Serif, serif;font-weight: bold;">Flower & Plants<br> Lover</p>
                         <ul>
-                            <li style="font-family:Inter,sans-serif;color:rgba(0, 0, 0, 0.5);font-size: 22px;">
+                            <li class="esu-tx">
     
    Indulge your senses with the beauty and<br> fragrance of our fresh flower shop. From classic <br>roses to exotic blooms, we offer a wide variety<br> of fresh.</li>
-                            <li style="font-family:Inter,sans-serif;color:rgba(0, 0, 0, 0.5);font-size: 22px;">Indulge your senses with the beauty and<br> fragrance of our fresh flower shop. From classic<br> roses to exotic blooms, we offer a wide variety <br>of fresh.</li>
-                            <li style="font-family:Inter,sans-serif;color:rgba(0, 0, 0, 0.5);font-size: 22px;">Indulge your senses with the beauty and<br> fragrance of our fresh flower shop. From classic<br> roses to exotic blooms, we offer a wide variety<br> of fresh.</li>
+                            <li class="esu-tx">Indulge your senses with the beauty and<br> fragrance of our fresh flower shop. From classic<br> roses to exotic blooms, we offer a wide variety <br>of fresh.</li>
+                            <li class="esu-tx">Indulge your senses with the beauty and<br> fragrance of our fresh flower shop. From classic<br> roses to exotic blooms, we offer a wide variety<br> of fresh.</li>
                         </ul>
                      </div> 
 
                      </div>
 
-                <p style=" text-align: center; font-family: Noto Serif, serif;font-weight: bold;font-size: 50px;"><span style="color:rgba(233, 90, 8, 1)">Latest </span> Deals</p>
-            <p  style="text-align: center;font-family:Inter, sans-serif ; font-size: 22px;color: rgba(0, 0, 0, 0.5);margin-bottom: 130px;">Indulge your senses with the beauty and fragrance of our fresh flower shop. From<br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                <p class="tx-deals"><span style="color:rgba(233, 90, 8, 1)">Latest </span> Deals</p>
+            <p class="tx-deals-2">Indulge your senses with the beauty and <span class="mobile-break"><br></span> fragrance of our fresh flower shop. From<span class="eas"><br> </span>classic<span class="mobile-break"><br></span> roses to exotic blooms, we offer a wide variety of<span class="mobile-break"><br></span> fresh.</p>
 
         <div class="deals">
 
@@ -206,7 +204,7 @@
       
     <div class="logo-tx">
         <img src="../B12A02-Responsive-Flowers/assets/logo.png">
-        <p>Indulge your senses with the<br> beauty and fragrance of our fresh<br> flower shop. </p>
+        <p>Indulge your senses with the<span class="eas"><br> </span>beauty and<span class="mobile-break"><br></span> fragrance of our fresh<span class="eas"><br></span> flower shop. </p>
     </div>
 
      <div>
@@ -245,6 +243,16 @@
 
 
 </footer>
+
+
+
+<script>
+  
+  function addtoCart(){
+    alert("Flower Added to Cart");
+  }
+
+</script>
 
 </body>
 </html>
